use basicDataBinner for custom data binning